# llm-react-agents

./: .gitignore  GOOGL_2024_to_2025.csv  README.md  pyproject.toml  react_tools.py
Edge Cases/: provide-ticker.txt  weather-forecast.txt
GOOGLE 2015-2023/: GOOGLE-2015-2023.txt  GOOGL_2015_to_2023.csv  GOOGL_2015_to_2023_metrics.csv  GOOGL_2015_to_2023_metrics.txt  GOOGL_2015_to_2023_price_predictions.csv  GOOGL_2015_to_2023_volatility_summary.csv
TESLA 2020-2024/: TESLA-chat.txt  TSLA_2020_to_2024.csv  TSLA_2020_to_2024_metrics.csv  TSLA_2020_to_2024_metrics.txt  TSLA_2020_to_2024_price_predictions.csv  TSLA_2020_to_2024_volatility_summary.csv
